--- a/css/style.css
+++ b/css/style.css
@@ -452,13 +452,23 @@ a[disabled="disabled"]::before,a:visited[disabled="disabled"]::before {
     left: 0
 }
 
-h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5 {
+h1,.h1,h2,.h2,h4,.h4,h5,.h5 {
     text-rendering: optimizelegibility;
     font-weight: 500;
     font-family: "gt_walsheimregular",Helvetica,Arial,sans-serif;
     text-decoration: none;
     font-size: 7.8rem;
     line-height: 7rem;
+    margin: 0 0 0 0;
+    margin-left: -6px
+}
+h3,.h3 {
+text-rendering: optimizelegibility;
+    font-weight: 300;
+    font-family: "gt_walsheimregular",Helvetica,Arial,sans-serif;
+    text-decoration: none;
+    font-size: 5.8rem;
+    line-height: 5rem;
     margin: 0 0 0 0;
     margin-left: -6px
 }
